assets/css/style.css
/* ----------------------------------Meta Level */

@import url('https://fonts.googleapis.com/css?family=Gafata&display=swap');
body {
    font-family: 'Gafata', sans-serif;
}

h1, h2, h3, h4 {
    font-weight: 600;
}

/* ----------------------------------The Header */

.jumbotron {
    position: relative;
    background-attachment: fixed;
    background-image: url('../images/dair-art.jpg');
    background-position: top;
    background-size: cover;
    background-repeat: no-repeat;
    height: 100vh;
    width: 100vw;
    margin-bottom: 0px;
}

.gaeilge {
    text-decoration: none;
    color: #000000;
    transition: all 0.5s ease-in-out;
    -moz-transition: all 0.5s ease-in-out;
    -webkit-transition: all 0.5s ease-in-out;
    -o-transition: all 0.5s ease-in-out;
}

.gaeilge:hover {
    text-decoration: none;
    color: #A51723;
}

.gaeilge.scrolled {
    color: #ffffff;
    margin-bottom: 0;
}

.gaeilge.scrolled:hover {
    color: #ffcace;
}

.music-container {
    text-align: center;
    padding: 0;
    margin-top: -20px;
}

.music-player {
    height: 40px;
}

.music-player-text {
    color: #A51723;
    font-weight: 600;
    transition: all 0.5s ease-in-out;
    -moz-transition: all 0.5s ease-in-out;
    -webkit-transition: all 0.5s ease-in-out;
    -o-transition: all 0.5s ease-in-out;
}

.music-player-text.scrolled {
    display: none;
}

.cta {
    position: absolute;
    top: 92vh;
    text-align: center;
    background-color: white;
    color: #A51723;
    opacity: 0.8;
    position: scroll;
    height: 8vh;
}

.cta-text {
    padding-top: 10px;
    font-weight: 600;
}

.cta-text p a {
    text-decoration: none;
    color: #329e11;
    transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    -webkit-transition: all 0.3s ease-in-out;
    -o-transition: all 0.3s ease-in-out;
}

.cta-text p a:hover {
    text-decoration: none;
    color: #1b631f;
}

.banner-logo-container {
    padding: 0;
}

.banner-logo {
    width: 100%;
    height: auto;
}

/* ----------------------------------Navbar */

.navbar-default {
    background: transparent;
    transition: 0.5s ease-in;
    -moz-transition: 0.5s ease-in;
    -webkit-transition: 0.5s ease-in;
    -o-transition: 0.5s ease-in;
}

.navbar-default.scrolled {
    background: rgba(0, 0, 0, 0.3);
}

.navbar-toggler {
    transition: all 0.5s ease-in-out;
    -moz-transition: all 0.5s ease-in-out;
    -webkit-transition: all 0.5s ease-in-out;
    -o-transition: all 0.5s ease-in-out;
}

.navbar-toggler.scrolled {
    background-color: rgba(242, 238, 216, 0.7)
}

.nav-item {
    background-color: #D9D4BF;
    border: .5px solid #707070;
    border-radius: 6px;
    max-width: 6em;
    font-weight: 600;
}

.navbar .navbar-nav .nav-item a {
    color: #73715F;
    transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    -webkit-transition: all 0.3s ease-in-out;
    -o-transition: all 0.3s ease-in-out;
}

.navbar .navbar-nav .nav-item a:hover {
    color: #A51723;
}

/* ----------------------------------The Section */

.section-container {
    display: block;
    text-align: center;
    justify-content: center;
    margin: 0;
    padding: 0;
}

.section-container a {
    text-decoration: none;
    color: #A51723;
    transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    -webkit-transition: all 0.3s ease-in-out;
    -o-transition: all 0.3s ease-in-out;
}

.section-container a:hover {
    text-decoration: none;
    color: #707070;
}

.section-container-row {
    margin: 0;
}

.media-container {
    background-color: #73715F;
    margin: 0;
    padding: 0;
}

.media {
    display: inline-table;
    width: 100%;
}

.media-heading h3 {
    color: #D9D4BF;
    text-align: left;
    margin-top: 1em;
    margin-left: 1em;
    margin-bottom: -.6em;
}

.media-card {
    display: block;
    margin: 12% auto;
    width: 80%;
    height: auto;
}

.media-card iframe {
    border-radius: 10px;
    width: 100%;
    border: none;
}

.iframe-text {
    color: #D9D4BF;
    padding-top: 0.7em;
}

.media-card img {
    border-radius: 10px;
}

.media-card-text {
    color: #D9D4BF;
    padding-top: 0.7em;
}

.news-container {
    background-color: #D9D4BF;
    width: 100%;
    padding: 0;
}

.news {
    display: inline-table;
}

.news-heading {
    text-align: left;
    margin-top: 1.5em;
    margin-left: 1.5em;
}

.news-card {
    background-color: #F2EED8;
    border-radius: 10px;
    display: block;
    margin: 6% auto;
    width: 85%;
    height: auto;
}

.news-card h4 {
    text-align: center;
    margin: 0 .4em;
    padding-top: 1em;
    padding-bottom: -1.2em;
}

.news-card-text {
    text-align: justify;
    padding: 1.5em;
}

/* --------------Disc Section */

.disc-container {
    background-color: #73715F;
    margin: 0;
    padding: 0;
}

.disc-heading {
    color: #F2EED8;
    text-align: center;
    padding-top: 2.2em;
}

.disc-heading h2 {
    margin: 0;
}

.disc-card {
    margin: 3em auto;
    width: 90%;
    height: auto;
    border-radius: 10px;
}

.disc-card .row {
    background-color: #D9D4BF;
    border-radius: 10px;
    margin: 0;
    padding: 0;
}

.disc-card-heading {
    color: #000000;
    text-align: left;
    padding: 0;
    margin: 0;
}

.disc-card-heading h3 {
    padding: 1em;
    padding-left: 4%;
}

.disc-album-cover {
    margin: 0;
    padding: 0 1.5em 2em 1.5em;
}

.disc-album-cover img {
    width: 90%;
    height: auto;
    border-radius: 10px;
}

.disc-card-text {
    background-color: #F2EED8;
    border-radius: 10px;
    width: 93%;
    height: auto;
    padding: 1em;
    margin: 0 0 2.3em 0;
}

.disc-card-text p {
    text-align: justify;
    padding: 0 .5em;
    margin: 0;
}

/* ----------------------------------The Footer */

footer {
    height: 4em;
    padding: 1.1em;
    background-color: #CFCDBF;
}

.copyright-text {
    padding-top: 8px;
    color: #73715F;
    opacity: 0.8;
}

.social-media-links li a i {
    color: #73715F;
    background: #CFCDBF;
    line-height: 10px;
    padding: 15px 12px 0px;
    transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    -webkit-transition: all 0.3s ease-in-out;
    -o-transition: all 0.3s ease-in-out;
}

.social-media-links li a i:hover {
    color: #A51723;
}

/* ----------------------------------Media Queries */

/* --------------------Heights */

@media (min-height: 1000px) {
    .cta-text {
        padding-top: 30px;
    }
}

/* --------------------Widths */

/* ----------Larger Resolutions */

@media (min-width: 4000px) {
    body {
        font-size: 3em;
    }
    h1, h2, h3, h4 {
        font-size: 1.6em;
    }
    .music-container {
        margin-right: -2em;
    }
    .music-player {
        height: 90px;
        width: 650px;
    }
    .media-card iframe {
        height: 18em;
    }
    .disc-container {
        font-size: 130%;
    }
    .social-media-links li a i {
        margin-left: .8em;
    }
}

@media (min-width: 3500px) and (max-width: 3999px) {
    .disc-container {
        font-size: 140%;
    }
}

@media (min-width: 3000px) and (max-width: 3499px) {
    .disc-container {
        font-size: 120%;
    }
}

@media (min-width: 3000px) and (max-width: 3999px) {
    body {
        font-size: 2.5em;
    }
    h1, h2, h3, h4 {
        font-size: 1.5em;
    }
    .music-container {
        margin-top: -0.9em;
        margin-right: -2.5em;
    }
    .music-player {
        height: 100px;
        width: 560px;
    }
    .media-card iframe {
        height: 18em;
    }
    .social-media-links li a i {
        margin-left: .6em;
    }
}

@media (min-width: 2500px) and (max-width: 2999px) {
    .disc-container {
        font-size: 130%;
    }
}

@media (min-width: 2000px) and (max-width: 2999px) {
    body {
        font-size: 2em;
    }
    h1, h2, h3, h4 {
        font-size: 1.4em;
    }
    .music-container {
        margin-right: -1em;
    }
    .music-player {
        height: 80px;
        width: 450px;
    }
    .media-card iframe {
        height: 15em;
    }
    .social-media-links li a i {
        margin-left: .5em;
    }
}

@media (min-width: 1750px) and (max-width: 1999px) {
    .disc-container {
        font-size: 120%;
    }
}

@media (min-width: 1500px) and (max-width: 1999px) {
    body {
        font-size: 1.5em;
    }
    h1, h2, h3, h4 {
        font-size: 1.3em;
    }
    .music-container {
        padding-top: .5em;
        margin-right: -.8em;
    }
    .music-container.scrolled {
        margin-top: -8px;
    }
    .music-player {
        width: 360px;
    }
    .media-card iframe {
        height: 13em;
    }
    .social-media-links li a i {
        margin-left: .3em;
    }
}

@media (min-width: 1200px) and (max-width: 1499px) {
    .disc-container {
        font-size: 135%;
    }
}

@media (min-width: 992px) and (max-width: 1499px) {
    .gaeilge-container.scrolled {
        padding-top: 7px;
    }
    .music-container.scrolled {
        margin-top: 0;
    }
    .cta-text {
        font-size: 1.2em;
    }
    .media-card iframe {
        height: 15em;
    }
}

@media (min-width: 992px) and (max-width: 1199px) {
    .gaeilge {
        margin-right: -15px;
    }
    .music-container {
        margin-right: -20px;
    }
    .disc-container {
        font-size: 120%;
    }
}

@media (min-width: 768px) and (max-width: 1499px) {
    .copyright-text {
        padding-top: 2px;
    }
    .social-media-links li a i {
        padding-top: 12px;
    }
}

/* ----------Smaller Resolutions */

@media(min-width: 992px) {
    .navbar .navbar-nav .nav-item {
        margin-bottom: 70px;
    }
    .navbar .navbar-nav .nav-item.scrolled {
        margin-bottom: 0;
    }
    .gaeilge-container {
        padding-top: 10px;
    }
}

@media(max-width: 991px) {
    .cta-text p span {
        display: none;
    }
    .media-card iframe {
        height: 15em;
    }
}

@media(max-width: 767px) {
    .nav-item {
        border: none;
        border-radius: 0;
        background-color: none;
    }
    .gaeilge {
        display: none;
    }
    .navbar-default.scrolled {
        background-color: transparent;
    }
    .media-card iframe {
        height: 15em;
    }
    .disc-card-heading h3 {
        text-align: center;
        color: #F2EED8;
    }
    .disc-album-cover {
        padding-top: 1.5em;
        padding-bottom: 0;
    }
    .disc-card-text{
        width: 100%;
        height: 100%;
        margin: 0;
        padding: 1.5em;
    }
    .copyright-text {
        padding-top: 0px;
    }
    .social-media-links li a i {
        font-size: 1.5em;
        padding: 7px 10px 10px;
    }
}

@media(max-width: 575px) {
    .gaeilge {
        display: none;
    }
    .cta-text {
        font-size: 0.8em;
    }
    .media-card iframe {
        height: 12em;
    }
    .social-media-links {
        text-align: center;
    }
    .social-media-links li a i {
        font-size: 1.3em;
        padding: 7px 10px 10px;
    }
}

@media(max-width: 340px) {
    .cta-text {
        font-size: 0.7em;
    }
}

